--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,15 @@
 <resources>
     <string name="app_name">NobelAndroidApp</string>
+    <string name="physics">Physics</string>
+    <string name="chemistry">Chemistry</string>
+    <string name="medicine">Medicine</string>
+    <string name="literature">Literature</string>
+    <string name="peace">Peace</string>
+    <string name="economic_sciences">Economic Sciences</string>
+    <string name="physics_abbreviation">phy</string>
+    <string name="chemistry_abbreviation">che</string>
+    <string name="medicine_abbreviation">med</string>
+    <string name="literature_abbreviation">lit</string>
+    <string name="peace_abbreviation">pea</string>
+    <string name="economic_sciences_abbreviation">eco</string>
 </resources>
